--- a/default/template/html/vote/vote_button.template
+++ b/default/template/html/vote/vote_button.template
@@ -1,5 +1,5 @@
 <!-- vote_button.template -->
 <a
 	href="/post.html?comment=%23$voteValue&replyto=$fileHash&returnto=$returnTo"
-	class="$class">$voteCaption</a>;
+	class="$class">$voteCaption</a>
 <!-- / vote_button.template -->
