--- a/default/template/html/page/bookmark.template
+++ b/default/template/html/page/bookmark.template
@@ -1,67 +1,67 @@
 <!-- bookmark.template -->
 <fieldset>
-    <legend><p>Same Window</p></legend>
+	<legend><p>Same Window</p></legend>
 
-    <p>
-        <span class=beginner>
-            These bookmarklets are the most compatible.<br>
-            They do not try to open a new window or tab.
-        </span>
-    </p>
+	<p class=beginner>
+		These bookmarklets are the most compatible.<br>
+		They do not try to open a new window or tab.
+	</p>
 
-    <p>
-        <a href="javascript:window.location='http://localhost:2784/post.html?comment='+encodeURIComponent(document.location)">+URL</a>
-        <br>
-        <span class=beginner>Clip just the address of current page as a new item</span>
-    </p>
+	<p>
+		<a href="javascript:window.location='http://localhost:2784/post.html?comment='+encodeURIComponent(document.location)">+URL</a>
+		<br>
+		<span class=beginner>Clip just the address of current page as a new item</span>
+	</p>
 
-    <p>
-        <a href="javascript:window.location='http://localhost:2784/post.html?comment='+encodeURIComponent(window.getSelection())+'&s='+encodeURIComponent(document.location)">Clip</a>
-        <br>
-        <span class=beginner>Clip selected text and current page URL into new item.</span>
-    </p>
+	<p>
+		<a href="javascript:window.location='http://localhost:2784/post.html?comment='+encodeURIComponent(window.getSelection())+'&s='+encodeURIComponent(document.location)">Clip</a>
+		<br>
+		<span class=beginner>Clip selected text and current page URL into new item.</span>
+	</p>
+
+	<p class=advanced>
+		Uses <tt>window.location = ...</tt>
+	</p>
 </fieldset>
 
 <fieldset>
-    <legend><p>New Window</p></legend>
+	<legend><p>New Window</p></legend>
 
-    <p>
-        <span class=beginner>
-            These bookmarks try to open a new window.<br>
-            They may be affected by popup blockers.
-        </span>
-    </p>
+	<p>
+		<span class=beginner>
+			These bookmarks try to open a new window.<br>
+			They may be affected by popup blockers.
+		</span>
+	</p>
 
-    <p>
-        <a href="javascript:void(window.open('http://localhost:2784/post.html?comment='+encodeURIComponent(window.getSelection())+'&t='+encodeURIComponent(document.title)+'&s='+encodeURIComponent(document.location)))">
-            Clip
-        </a>
-        <br>
-        <span class=beginner>Clip selected text into new item along with URL and Title for attribution</span>
-    </p>
+	<p>
+		<a href="javascript:void(window.open('http://localhost:2784/post.html?comment='+encodeURIComponent(window.getSelection())+'&t='+encodeURIComponent(document.title)+'&s='+encodeURIComponent(document.location)))">
+			Clip
+		</a>
+		<br>
+		<span class=beginner>Clip selected text into new item along with URL and Title for attribution</span>
+	</p>
 
-    <p>
-        <a href="javascript:void(window.open('http://localhost:2784/post.html?comment='+encodeURIComponent(window.getSelection())))">
-            Rip
-        </a>
-        <br>
-        <span class=beginner>Clip just the selected text into new item</span>
-    </p>
+	<p>
+		<a href="javascript:void(window.open('http://localhost:2784/post.html?comment='+encodeURIComponent(window.getSelection())))">
+			Rip
+		</a>
+		<br>
+		<span class=beginner>Clip just the selected text into new item</span>
+	</p>
 
-    <p>
-        <span class=advanced>
-            Technical note: window.open() is used to open new window.
-        </span>
-    </p>
+	<p class=advanced>
+		Uses <tt>window.open( ... )</tt>
+	</p>
 </fieldset>
 
 <fieldset class=admin>
-    <legend><p>Operator</p></legend>
-    <p class=beginner>These bookmarks help operate system.</p>
-    <p>
-        <a href="http://localhost:2784/post.html?comment=Update">UPDATE</a>
-        <br>
-        <span class=beginner>Update site to reflect new data.</span>
-    </p>
+	<legend><p>Operator</p></legend>
+	<p class=beginner>These bookmarks help operate system.</p>
+	<p>
+		<a href="http://localhost:2784/post.html?comment=Update">UPDATE</a>
+		<br>
+		<span class=beginner>Update site to reflect new data.</span>
+	</p>
 </fieldset>
 <!-- / bookmark.template -->
