--- a/default/template/html/form/search.template
+++ b/default/template/html/form/search.template
@@ -1,11 +1,10 @@
 <!-- search.template -->
-<p class=warning>
-    <b>Your search will become public immediately.</b>
+<p class=beginner>
+    <b>Please Pay Attention:</b><br>
+    Search query will be published<br>
+    Put text, press button
 </p>
 <form action="/post.html" name=search class=advanced>
-    <p class=beginner>
-        Put some text and press button.
-    </p>
     <p>
         <input name=comment id=q type=text size=40>
         <input type=submit name=tag value="#Search">
