improve wording on settings dialog

--- a/default/template/html/form/settings.template
+++ b/default/template/html/form/settings.template
@@ -10,7 +10,7 @@
 </noscript>
 
 <fieldset>
-	<legend><b>Settings</b><br></legend>
+	<legend><b>Intensity</b><br></legend>
 
 	<p>
 		<label for=chkShowAdvanced>
