improve wording on help page

--- a/default/template/html/page/help.template
+++ b/default/template/html/page/help.template
@@ -32,7 +32,7 @@
 
 <p>
     <a href="/jstest1.html">Browser Test</a>:
-    Help us help you with a browser test! <br>
+    For troubleshooting. <br>
 </p>
 
 
