--- a/default/template/html/page/manual_advanced.template
+++ b/default/template/html/page/manual_advanced.template
@@ -4,10 +4,10 @@
 
 <p>
 	Please enjoy this manual, and report any inaccuracies or potential for improvement.
-	When reporting, please use both <code>#meta</code> and <code>#manual</code> tags.
+	It also helps if you use both <code>#meta</code> and <code>#manual</code> tags.
 </p>
 
-<h3>These Features May Be Confusing At First</h3>
+<h3>Possibly Confusing Features</h3>
 
 <ul>
 	<li>Your profile key lives on your device, not on this website or server.</li>
@@ -20,49 +20,51 @@
 <!-- -->
 
 <h3>Expert Mode Overview</h3>
-
 	<p>
 		To send message:<br>
 		* Write message in text file<br>
 		* Submit it (e.g. using <tt>curl</tt>) to <tt>/post.html</tt>
 	</p>
-
 	<p>
 		To create profile:<br>
 		* Use <tt>gpg --gen-key</tt> to generate key<br>
 		* Export your public key using <tt>--gpg --armor --export</tt><br>
 		* Submit (e.g. using <tt>curl</tt>) to <tt>/post.html</tt>.<br>
 	</p>
-
 	<p>
 		To post using profile:<br>
 		* Use <tt>gpg --clearsign</tt> to sign your text file<br>
 		* Submit to <tt>/post.html</tt>.<br>
 	</p>
-
 	<p>
 		* Refer to <a href="/manual.html">Manual</a> for token syntax.<br>
 	</p>
-
 
 <!-- -->
 
 <h3>Terminology and Notation</h3>
 
 <p><b>epoch time</b></p>
-
-<p>Most timestamps are currently in epoch time. This is the number of seconds since the
-	beginning of the Unix Epoch, and is (for the foreseeable future) a 10-digit number, beginning with 15. Example: <code>1557587720</code>.</p>
+<p>
+    Most timestamps are use epoch time, either integer or floating point.<br>
+    Examples: <br>
+    <code>1557587720</code> <br>
+    <code>1557587720.12345</code>
+</p>
 
 <p><b>item</b></p>
+<p>
+    An item is one "something" that has been added to the message board. <br>
+    Stored as plain text (.txt) for easy access.<br>
+    Identified with a hash, usually shortened like this: <code><a href="/6b/50/a8112fde3a6276cb0c5b9cd8c949bc1625d0.html">&gt;&gt;6b50a811..</a></code></p>
+</p>
 
-<p>An item is one "something" that has been added to the message board. Items are the most basic elements, on which everything else is built.</p>
+<p><b>token</b></p>
+<p>
+    A token is any text which is recognized as a command.<br>
+    Common examples are ">>" prefixed item references and #HashTags<br>
+</p>
 
-<p>Everything that happens on the message board is an item. For example, a text that someone has posted is an item, and so is a user profile, a vote, a reply, etc.</p>
-
-<p>Items are stored as plain text files (.txt), one of the most common and supported file formats, so that they can be easily inspected.</p>
-
-<p>Items are identified with a 40-digit "hash", which looks like this: <code><a href="/6b/50/6b50a8112fde3a6276cb0c5b9cd8c949bc1625d0.html">6b50a8112fde3a6276cb0c5b9cd8c949bc1625d0</a></code>. Sometimes you may see it shortened, like this: <code><a href="/6b/50/a8112fde3a6276cb0c5b9cd8c949bc1625d0.html">6b50a811..</a></code></p>
 
 <p>(more to come)</p>
 
@@ -174,59 +176,9 @@
 -->
 <!-- -->
 
-<a name=admin><h3>Admin Stuff</h3></a>
+<a name=admin><h3>Administration</h3></a>
 
-<h4>Root Operator / Root Admin / Root Key</h4>
-
-<p>The root key is set by putting the public key, ASCII-armored, into <code>./admin.key</code>.
-
-<p>This gives the user unlimited powers.</p>
-
-<h5>Remove</h5>
-
-<p>
-	The <code>#remove</code> tag, when applied by Admin,
-	will cause an item to be removed at the nearest opportunity,
-	usually within seconds.
-</p>
-
-<h5>Approve</h5>
-
-<p>
-	When Admin uses <code>#approve</code> tag,
-	item is displayed in Approved Threads pages.
-</p>
-
-<h5>Admin</h5>
-
-<p>
-	When Admin uses <code>#admin</code> tag on a user's registration,
-	that user also becomes Admin.
-
-	This setting must be enabled using <code>config/admin/allow_admin_permissions_tag_lookup</code>
-</p>
-
-<h5>#config</h5>
-
-<p>
-	The <code>#config</code> token can always be applied by Admin.
-</p>
-
-<p>
-	Settings under the <code>config/admin/</code> directory can only be set by Admin user.
-</p>
-
-<p>
-	To allow non-admin users to change configuration,
-	which should only be enabled in a trusted environment,
-	use the following settings:
-</p>
-
-<p>
-	<code>config/admin/signed_can_config</code>
-	<code>config/admin/cookied_can_config</code>
-	<code>config/admin/anyone_can_config</code>
-</p>
+<p>Please see doc/1337.txt</p>
 
 <!-- -->
 
