--- a/default/template/html/form/profile.template
+++ b/default/template/html/form/profile.template
@@ -25,13 +25,12 @@
 
 		<hr>
 
-		<p>
+		<p id=pCurrentProfileIndicator>
 			<b><span id=lblHandle></span></b><br>
 			<span id=lblFingerprint></span><br>
-			<span id=spanProfileLink></span>
 		</p>
 
-		<hr>
+		<hr id=pCurrentProfileIndicatorSeparator>
 
 		<p id=pExitButton>
 			<input
