--- a/default/template/html/form/settings.template
+++ b/default/template/html/form/settings.template
@@ -28,7 +28,16 @@
 </fieldset>
 
 <fieldset class=advanced>
-	<legend><b>Desktop</b><br></legend>
+	<legend><b>Annoyances</b><br></legend>
+
+	<p><font color=orange>Caution: Known to cause <br> temporary insanity <br> in sensitive individuals.</font></p>
+
+	<p>
+		<label for=chkDraggableSpawn>
+			<input id=chkDraggableSpawn name=chkDraggableSpawn type=checkbox onchange="if (window.SaveCheckbox) { SaveCheckbox(this, 'draggable_spawn'); }">
+			Spawn dialogs in-page<noscript><b>*</b></noscript>
+		</label>
+	</p>
 
 	<p>
 		<label for=chkDraggable>
