--- a/default/template/html/form/settings.template
+++ b/default/template/html/form/settings.template
@@ -49,7 +49,7 @@
 	<p>
 		<label for=chkDraggableRestore>
 			<input id=chkDraggableRestore name=chkDraggableRestore type=checkbox onchange="if (window.SaveCheckbox) { SaveCheckbox(this, 'draggable_restore'); }">
-			Restore dialog placement<noscript><b>*</b></noscript>
+			Restore placement automatically<noscript><b>*</b></noscript>
 		</label>
 	</p>
 
@@ -57,6 +57,13 @@
 		<label for=chkDraggableScale>
 			<input id=chkDraggableScale name=chkDraggableScale type=checkbox onchange="if (window.SaveCheckbox) { SaveCheckbox(this, 'draggable_scale'); }">
 			Rescale active dialog<noscript><b>*</b></noscript>
+		</label>
+	</p>
+
+	<p>
+		<label for=chkDraggableActivate>
+			<input id=chkDraggableActivate name=chkDraggableActivate type=checkbox onchange="if (window.SaveCheckbox) { SaveCheckbox(this, 'draggable_activate'); }">
+			Activate with pointer<noscript><b>*</b></noscript>
 		</label>
 	</p>
 </fieldset>
