--- a/default/template/html/page/manual.template
+++ b/default/template/html/page/manual.template
@@ -10,7 +10,7 @@
 
 <p>To create profile, press Enter button.</p>
 
-<p>To share your profile, press "Publish profile".</p>
+<p>To share your profile, press "Go to profile".</p>
 
 <p>Advanced: To choose a name, use "my name is ..." command.</p>
 
