--- a/default/template/html/access.template
+++ b/default/template/html/access.template
@@ -4,10 +4,10 @@
 		<p>
 			<span class=beginner>Use these buttons to set interface mode:<br></span>
 			<input name=btnLightOn value="Light" id=lightOn type=submit>
-			<input name=btnLightOff value="Modern" id=lightOff type=submit>
+			<input name=btnLightOff value="Modern" class=advanced id=lightOff type=submit>
 			<input value="Beginner" type=submit name=ui>
 			<input value="Intermediate" type=submit name=ui>
-			<input value="Advanced" type=submit name=ui>
+			<input value="Advanced" class=advanced type=submit name=ui>
 		</p>
 	</fieldset>
 </form>
