profile.template: remove incorrect caption

--- a/default/template/html/form/profile.template
+++ b/default/template/html/form/profile.template
@@ -14,7 +14,7 @@
 
 		<p id=pSigningIndicator>
 			<span id=lblSigningIndicator>
-				<noscript>* Signed in with cookie.</noscript>
+				<noscript>*</noscript>
 				<script>
                 <!--
                 document.write('...');
