fix nojs profile link on profile page

--- a/default/template/html/form/profile.template
+++ b/default/template/html/form/profile.template
@@ -30,6 +30,8 @@
 			<span id=lblFingerprint></span><br>
 		</p>
 
+		<p id=spanProfileLink></p>
+
 		<hr id=pCurrentProfileIndicatorSeparator>
 
 		<p id=pExitButton>
